<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity"
    android:background="@mipmap/login_bgimg"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginLeft="62dp"
        android:text="Hello!"
        android:textColor="#00B38A"
        android:textSize="31sp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="62dp"
        android:layout_marginTop="21dp"
        android:text="Selamat datang di\nAppname"
        android:textSize="23sp"
        android:textColor="#00B38A"
        android:lineSpacingExtra="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="28dp"
        android:gravity="center_vertical"
        >
        <TextView
            android:id="@+id/tv_phone_code"
            android:layout_width="46dp"
            android:layout_height="match_parent"
            android:textColor="#00B38A"
            android:text="+62"
            android:gravity="center"
            android:textSize="16sp"
            />
        <View
            android:layout_width="1dp"
            android:layout_height="14dp"
            android:background="#BFBFBF"/>
        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="12dp"
            android:textColor="#333333"
            android:textSize="14sp"
            android:maxLength="12"
            android:hint="@string/enter_your_mobile_number"
            android:textColorHint="#88A69F"
            android:inputType="number"
            android:background="@null"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BFBFBFBF"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        />
    <TextView
        android:id="@+id/tv_code"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:hint="@string/verification_code"
        android:paddingLeft="6dp"
        android:gravity="center_vertical"
        android:textColor="#333333"
        android:textColorHint="#88A69F"
        android:textSize="14sp"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#BFBFBFBF"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="52dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:text="@string/get_vcode"
        android:textAllCaps="false"
        android:background="@drawable/btn_login"
        style="?android:attr/borderlessButtonStyle"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >
        <CheckBox
            android:id="@+id/cb_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/check_circle_green"
            android:button="@null"
            android:text="@string/agree_privacy"
            android:textSize="10sp"
            android:textColor="#333333"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:drawablePadding="5dp"
            android:checked="true"
            />
        <TextView
            android:id="@+id/tv_privacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#00B38A"
            android:textSize="10sp"
            android:text="@string/privacy"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#333333"
            android:textSize="10sp"
            android:text="@string/yinhao"
            android:paddingRight="15dp"
            />
    </LinearLayout>

</LinearLayout>